	* The Remote Control plugin no longer adds duplicate groups to your
	  buddy list.
	* Servers and ports are now imported correctly in MSN.
	* Core/UI split the core initialization and shutdown.
	* MSN messages with newlines are now sent correctly to MSN clients.
	* Italian translation updated (Claudio Satriano)
	* British English "translation" added (Sam Halliday)

version 0.65 (07/16/2003):
	* French translation updated (Eric (Zongo) Boumaour)
	* Portuguese (Brazilian) translation added (Mauricio de Lemos Rodrigues Collares Neto)
	* Korean translation updated (Kyung-uk Son)
	* Japanese translation updated (Junichi Uekawa)
	* Hebrew translation added (Pavel Bibergal)
	* Russian translation updated (Dzmitry Chekmarou)
	* Danish translation updated (Morten Brix Pedersen)
	* Hungarian translation updated (Zoltan Sutto)
	* Italian translation updated (Claudio Satriano)
	* Chinese (Simplified) translation updated (Funda Wang)
	* Chinese (Traditional) translation updated (Ambrose C. Li)
	* Massive internal core/ui splitting
	* New account dialog
	* Preferences moved to ~/.gaim/prefs.xml
	* Account information moved to ~/.gaim/accounts.xml
	* Pounces moved to ~/.gaim/pounces.xml
	* Added protocol icons to various drop-down boxes
	* New Send IM buddy icon merged from Ximian Desktop 2
	* Fixed "Sort by Status" crash
	* Fixed the MSN signon crash
	* Fixed the MSN add buddy crash
	* Fixed the MSN empty buddy list bug
	* Fixed all known MSN chat bugs
	* Fixed HTTP redirect handling in smiley retrieval. This fixes the
	  problems with some smiley themes.
	* Chats in MSN can now be initiated by right-clicking a buddy and
	  choosing Initiate Chat.
	* MSN Alerts and incoming MSN pages no longer pop up several error dialogs
	* Ability to view iChat "Available" messages for AIM
	* Stores your buddy icon on the server for AIM
	* Support for non-ascii characters with Yahoo! Messenger
	* Focus returns to the input box when you click elsewhere, like it used to